# EMOTYC-v1

./: .gitignore  README.md  compare_results.py  evaluate.py  predict.py  pyproject.toml  train_linear.py
analysis/: __init__.py  conditional.py  data_loader.py  inference.py  logit_analysis.py  metrics.py  report.py  stratification.py  visualization.py
docs/: architecture.md
scripts/: analyze_cyberagg_errors.py  evaluate_cyberagg_emotyc.py  evaluate_tfidf_linear_svc_cv.py  install_onnxruntime.py
src/emotyc/: __init__.py  artifacts.py  compare.py  data_sources.py  datasets.py  encoders.py  formatting.py  heads.py  inference.py  io.py  linear.py  metrics.py  predictors.py  registry.py  results.py  templates.py
src/emotyc/cli/: __init__.py  compare_results.py  evaluate.py  predict.py  train_linear.py
tests/: test_datasets.py  test_formatting_metrics_inference.py  test_head_and_compare.py  test_registry_artifacts.py  test_train_linear.py
